--- a/css/reset.css
+++ b/css/reset.css
@@ -15,10 +15,14 @@
 
 html {
     color-scheme: dark light;
+    overflow-x: hidden;
 }
 
 body {
     min-height: 100vh;
+    width: 100vw;
+    max-width: 100%;
+    overflow-x: hidden;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
     background-color: var(--color-bg);
